<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/note_icon"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:src="@drawable/note_rounded"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="2dp"/>
    <LinearLayout
        android:id="@+id/hello_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:layout_below="@+id/note_icon">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_started"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hello_text"
        android:orientation="vertical"
        android:layout_marginVertical="28dp">

        <EditText
            android:id="@+id/email_edText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:layout_marginTop="12dp"/>
        <EditText
            android:id="@+id/password_edText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:layout_marginTop="12dp"/>
        <EditText
            android:id="@+id/confirm_password_edText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/create_account"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="12dp"
            android:textAllCaps="true"
            />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/my_primary"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_layout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Already have acccount? " />
        <TextView
            android:id="@+id/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </LinearLayout>

</RelativeLayout>